More name changes

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordovapunchh",
+  "name": "cordova-plugin-punchh",
   "version": "1.0.0",
   "description": "Native helper to make interacting with the Punchh API easier for Cordova applications",
   "cordova": {
-    "id": "com.wearehathway.cordova.plugins.punchh",
+    "id": "cordova-plugin-punchh",
     "platforms": [
       "android",
       "ios"
